# kalshi-worldview

./: .gitignore  README.md
.cursor/plans/: streaming-derivative-validation-d2f7a2c2.plan.md
docs/: plan.md
server/: .env.example  README_SETUP.md  pyproject.toml  test_components.py  test_e2e.py  test_streaming.py
server/app/: claim_graph.py  derivatives.py  embeddings.py  exa_client.py  graph.py  kalshi_client.py  kalshi_types.py  llm_schemas.py  logging_config.py  main.py  models.py  suggest.py  verification.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Graph.tsx  SidePanel.tsx
web/lib/: types.ts
