[tool.poetry]
name = "kalshi-event-graph-server"
version = "0.1.0"
description = "Python FastAPI backend for Worldview → Kalshi Event Graph"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app", from = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.8.2"
httpx = "^0.27.0"
tenacity = "^9.0.0"
openai = "^1.50.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
mypy = "^1.11.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


